<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.ghini.pocket.MainActivity$PlaceholderFragment">

    <EditText
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/search_message"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:onClick="searchData"
        android:text="@string/button_send"
        android:layout_below="@+id/searchText"
        android:layout_alignEnd="@+id/searchText" />

    <Button
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:onClick="scanBarcode"
        android:text="@string/button_scan"
        android:layout_below="@+id/send"
        android:layout_alignStart="@+id/send" />

    <EditText
        android:id="@+id/locationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/location_code"
        android:inputType="textPersonName"
        android:layout_below="@+id/scan"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/zero_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onZeroSearchLog"
        android:text="@string/zero_log"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_below="@+id/locationText"
        android:layout_alignEnd="@+id/locationText" />

</RelativeLayout>
