<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.ghini.pocket.MainActivity">

    <TextView
        android:id="@+id/tvAccession"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFamilyLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/family"
        app:layout_constraintLeft_toLeftOf="@+id/tvAccession"
        app:layout_constraintTop_toTopOf="@+id/tvFamily"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/tvFamily"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAccession"
        app:layout_constraintRight_toRightOf="@+id/tvAccession"
        app:layout_constraintLeft_toRightOf="@+id/tvFamilyLabel" />

    <TextView
        android:id="@+id/tvSpeciesLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/binomial"
        app:layout_constraintLeft_toLeftOf="@+id/tvAccession"
        app:layout_constraintTop_toTopOf="@+id/tvSpecies" />

    <TextView
        android:id="@+id/tvSpecies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        app:layout_constraintRight_toRightOf="@+id/tvAccession"
        app:layout_constraintTop_toBottomOf="@+id/tvFamily"
        app:layout_constraintLeft_toRightOf="@+id/tvSpeciesLabel"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tvSourceLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/source"
        app:layout_constraintLeft_toLeftOf="@+id/tvAccession"
        app:layout_constraintTop_toTopOf="@+id/tvSource" />

    <TextView
        android:id="@+id/tvSource"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/tvSourceLabel"
        app:layout_constraintRight_toRightOf="@+id/tvAccession"
        app:layout_constraintTop_toBottomOf="@+id/tvNumberOfPics"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tvAcqDateLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/acquisition"
        app:layout_constraintLeft_toLeftOf="@+id/tvAccession"
        app:layout_constraintTop_toTopOf="@+id/tvAcqDate" />

    <TextView
        android:id="@+id/tvAcqDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toRightOf="@+id/tvAcqDateLabel"
        app:layout_constraintRight_toRightOf="@+id/tvAccession"
        app:layout_constraintTop_toBottomOf="@+id/tvSource"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tvLocationLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/location"
        app:layout_constraintLeft_toLeftOf="@+id/tvAccession"
        app:layout_constraintTop_toTopOf="@+id/tvLocation" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toRightOf="@+id/tvLocationLabel"
        app:layout_constraintRight_toRightOf="@+id/tvAccession"
        app:layout_constraintTop_toBottomOf="@+id/tvSpecies"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tvNumberOfPicsLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/n_of_pictures"
        app:layout_constraintLeft_toLeftOf="@+id/tvAccession"
        app:layout_constraintTop_toTopOf="@+id/tvNumberOfPics" />

    <TextView
        android:id="@+id/tvNumberOfPics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toRightOf="@+id/tvNumberOfPicsLabel"
        app:layout_constraintRight_toRightOf="@+id/tvAccession"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tvDateOfDeathLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/dismission"
        app:layout_constraintLeft_toLeftOf="@+id/tvAccession"
        app:layout_constraintTop_toTopOf="@+id/tvDateOfDeath" />

    <TextView
        android:id="@+id/tvDateOfDeath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toRightOf="@+id/tvDateOfDeathLabel"
        app:layout_constraintRight_toRightOf="@+id/tvAccession"
        app:layout_constraintTop_toBottomOf="@+id/tvAcqDate"
        app:layout_constraintHorizontal_bias="0.0" />

    <CheckBox
        android:id="@+id/cbOverride"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="false"
        android:text="@string/log_overrides"
        app:layout_constraintRight_toRightOf="@+id/tvAccession"
        app:layout_constraintStart_toStartOf="@+id/tvAccession"
        app:layout_constraintTop_toBottomOf="@+id/tvDateOfDeath" />

    <Button
        android:id="@+id/wikipedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onResultsWikipedia"
        android:text="@string/wikipedia"
        app:layout_constraintEnd_toEndOf="@+id/tvDateOfDeath"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbOverride" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSharedScanBarcode"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/wikipedia"
        app:layout_constraintLeft_toLeftOf="@+id/tvAccession"
        app:layout_constraintTop_toTopOf="@+id/wikipedia" />

</android.support.constraint.ConstraintLayout>
